style.css
/* ... */
/* Set core body defaults */
body {
    height: 100vh;
    overflow-x: hidden;
    line-height: 1.5;
}

/* Set shorter line heights on headings and interactive elements */
h1,
h2,
h3,
h4,
button,
input,
label {
    line-height: 1.1;
}


/* A elements that don't have a class get default styles */
a:not([class]) {
    text-decoration-skip-ink: auto;
    color: currentColor;
}

a {
    text-decoration: none;
}

/* Make images easier to work with */
img,
picture {
    max-width: 100%;
    display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
    font: inherit;
}

/* Make sure textareas without a rows attribute are not tiny */
textarea:not([rows]) {
    min-height: 10em;
}

/* Anything that has been anchored to should have extra scroll margin */
:target {
    scroll-margin-block: 5ex;
}

/* all colors are copied too lazy tow reite */
/* these are all called utility classes */
.text-primary-400 {
    color: var(--clr-primary-400);
}

.text-accent-400 {
    color: var(--clr-accent-400);
}

.text-accent-100 {
    color: var(--clr-accent-100);
}

.text-neutral-100 {
    color: var(--clr-neutral-100);
}

.text-neutral-900 {
    color: var(--clr-neutral-900);
}

.bg-primary-400 {
    background-color: var(--clr-primary-400);
}

.bg-accent-400 {
    background-color: var(--clr-accent-400);
}

.bg-accent-100 {
    background-color: var(--clr-accent-100);
}

.bg-neutral-100 {
    background-color: var(--clr-neutral-100);
}

.bg-neutral-900 {
    background-color: var(--clr-neutral-900);
}

.fw-bold {
    font-weight: var(--fw-bold);
}

.fw-semi-bold {
    font-weight: var(--fw-semi-bold);
}

.fw-regular {
    font-weight: var(--fw-regular);
}

.fs-primary-heading {
    font-size: var(--fs-primary-heading);
    line-height: 1.1;
}

.fs-secondary-heading {
    font-size: var(--fs-secondary-heading);
    line-height: 1.1;
}

.fs-600 {
    font-size: var(--fs-600);
}

.fs-500 {
    font-size: var(--fs-500);
}


.fs-400 {
    font-size: var(--fs-400);
}

.fs-300 {
    font-size: var(--fs-300);
}

.padding-block-900 {
    padding-left: 3rem;
}

.padding-block-700 {
    padding: 1.5rem;
}

/* setting up the environment */
body {
    font-size: var(--fs-body);
    font-family: var(--ff-family);
    color: var(--clr-primary-400);
}

.main-section,
.mid-section,
.primary-footer,
.cta {

    /* he added an extra calculation of min between the width and the max-width */
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    padding: var(--size-400);
    /* i think margin inline is gogod becuase if you flip the phone or sth */
}

header {
    justify-content: center;
}


/*
.even-columns{
    display: grid;
    gap: 1rem;
}*/
/* code is a bit bad because its inconsistent in behaivours some 
behaviours are written web first and the others are mobile first 
wihch annoys me a bit but i aint going to clean too much hassle */
.even-columns {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    justify-content: center;
}

.main-section p,
.mid-section p {
    margin-inline: auto;
    font-weight: var(--fw-semi-bold);
    opacity: 0.7;
}


/* jus here for the background image */
.cta {
    gap: 1rem;
    position: relative;
    isolation: isolate;
    /* i used to put here align items but it broke because the cta was changing */
    /* display type so i put it back in the media query so after changing the type from  */
    /* flex to grid i gotta align the items so putting the aligning of items here doesnt matter because */
    /* changing the alignment came after at least thats what i think */
    /* and here its changing becuase of even columns property class */
}

.cta p {
    text-align: center;
}

/* while this doesnt matter in any state of media and doesnt change by even columns changing so it stays here and stays the same */
.cta div {
    display: inline-flex;
    justify-content: end;
}

.cta::before {
    content: "";
    position: absolute;
    z-index: -2;
    inset: 0;
    background-image: url("images/bg-tablet-pattern.svg"), url("images/bg-tablet-pattern.svg");
    background-position: -6rem -5rem, 57rem -40rem;
    background-repeat: no-repeat;
    opacity: 0.1;
}

/* spacing and alignment of paragraphs and components */

p:not([class]) {
    max-width: 35ch;
    line-height: 1.5;
}

.manage-list ul p {
    max-width: 42ch;
}


:where(.spacer *) {
    margin-top: 2rem;
}

@media (min-width: 50em) {

    /* block elements for size higher than 800 */
    .even-columns {
        display: grid;
        text-align: left;
        align-items: start;
        justify-content: end;
        grid-auto-columns: 1fr;
        grid-auto-flow: column;
    }

    .even-columns p {
        margin-inline: 0;
    }

    .cta p {
        text-align: left;
    }

    .cta {
        grid-auto-columns: 3fr 1fr;
        align-items: center;
        padding: var(--size-800) 8rem var(--size-800) 5rem;
    }
}


/* button styling */
.button {
    cursor: pointer;
    padding: 1em 2.5em;
    border: 0;
    border-radius: 100vmax;
    font-weight: var(--fw-bold);
    font-size: var(--fs-button);
    color: var(--clr-accent-100);
    background-color: var(--clr-accent-400);
    box-shadow: 0 1.125em 1em -1em var(--clr-accent-500);
}

.button[data-type="inverted"] {
    background-color: var(--clr-accent-100);
    color: var(--clr-accent-400);

}

.button[data-type="inverted"]:hover,
.button[data-type="inverted"]:focus-visible {
    background-color: var(--clr-accent-100);
    color: var(--clr-accent-300);
}

.button:hover,
.button:focus-visible {
    background-color: var(--clr-accent-300);

}

/* header configurations for lower and higher screen sizes */

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: var(--size-600);
    margin: auto;
}

header button {
    display: inline-flex;
}
/* ... */

